--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -93,7 +93,7 @@ A tree is then grown in an iterative way from the top down\footnote{In this cont
 
 Finally, we would have that the tree's leafs are the partition subsets over the input data and once a learner is fit, predicting targets for new samples is straightforward: the prediction of their target class will be the value given after traveling the sample down to its corresponding leaf node.
 
-To illustrate this method, an instance is show in figure \cref{fg:rf-treeFigure}. This classification tree example is built for the two class problem of gender prediction using data from CDRs:
+To illustrate this method, an instance is show in \cref{fg:rf-treeFigure}. This classification tree example is built for the two class problem of gender prediction using data from CDRs:
 %[.{\textit{Woman}}]
 \smallskip
 \begin{figure}[h]\label{fg:rf-treeFigure}
