deleted unnecessary files and reordered label references among chapters and figures

--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -6,7 +6,7 @@
 %    Description: Chapter 2: Data descriptions, exploration and risk maps
 %===============================================================================
 
-\chapter{Data Description and Risk Maps}\label{cha:descr-risk}
+\chapter{Data Description and Risk Maps}\label{ch:descr-risk}
 
 \section{Mobile Phone Data Sources}
 
