--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -5,7 +5,7 @@
 %   Description: Chapter 1: Introduction
 %===================================================================================================
 
-\chapter{Introduction}\label{cha:intro}
+\chapter{Introduction}\label{ch:introduction}
 
 \todo{Extend intro of all concepts in paper: what are we doing, what is chagas, migrations, CDRs, parasites, epidemics, machine learning, and a comment on what will be done on further chapters.}
 
@@ -57,7 +57,7 @@ For more than 50 years, vector control campaigns have been underway in Argentina
 
 The ecoregion's low socio-demographic conditions further support the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas.
 % The ecoregion as of today is hyperendemic for the disease.
-This region is considered as the endemic zone $E_Z$ in the analysis described in \cref{ch:machineLearning} and \cref{cha:descr-risk}.
+This region is considered as the endemic zone $E_Z$ in the analysis described in \cref{ch:machineLearning} and \cref{ch:descr-risk}.
 
 \todo{add more references to examples of CDRs and chagas or other diseases}
 
@@ -92,7 +92,7 @@ Even though governmental programs have been ongoing for years now~\textcite{plan
 \end{figure}
 
 In 2004, the joint work of \textit{Instituto Nacional de Cardiología ``Ignacio Chávez''} and  \textit{Instituto de Biología de la UNAM} resulted in a Chagas disease database for Mexico~\textcite{cruz2006chagmex}. Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease. Based on this data, we defined the Mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide. The resulting risk region is shown in Figure~\cref{fig:endemic_zone_mexico}. It covers most of the South region of the country and includes the states of Jalisco, Oaxaca, Veracruz, Guerrero, Morelos, Puebla, Hidalgo and Tabasco.
-This region is considered as the endemic zone $E_Z$ for the Mexican case in the analysis described in~\cref{cha:descr-risk} and \cref{cha:results_conclusion}.
+This region is considered as the endemic zone $E_Z$ for the Mexican case in the analysis described in~\cref{ch:descr-risk} and \cref{ch:results_conclusion}.
 
 
 
