--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -5,7 +5,7 @@
 %  Description: Chapter: Evaluation and Results
 %===============================================================================
 
-\chapter{Summary of Results and Conclusion}\label{cha:results_conclusion}
+\chapter{Summary of Results and Conclusion}\label{ch:results_conclusion}
 
 
 \todo{redo chapter. Use this to only present a combined overview of results and Conclusion at teh end }
@@ -161,7 +161,7 @@ a user being endemic in $T_1$ is very correlated to being endemic in $T_0$, and 
 
 \section{Conclusions}\label{section:conclusions}
 
-The heatmaps shown in Section~\cref{cha:evaluation-results} expose a `temperature' descent from the core regions outwards. The heat is concentrated in the ecoregion and gradually descends as we move further away. This expected behavior could be explained by the fact that calls are in general of a local nature and limited to 3 or 4 main antennas used per user.
+The heatmaps shown in Section~\cref{ch:descr-risk} expose a `temperature' descent from the core regions outwards. The heat is concentrated in the ecoregion and gradually descends as we move further away. This expected behavior could be explained by the fact that calls are in general of a local nature and limited to 3 or 4 main antennas used per user.
 
 A more surprising fact is the finding of communities atypical to their neighboring region. They stand out for their strong communication ties with the studied region, showing significantly higher links of vulnerable communication. The detection of these antennas through the visualizations is of great value to health campaign managers. Tools that target specific areas help to prioritize resources and calls to action more effectively.
 
